# llm-lora-classification

./: .envrc  README.md  pyproject.toml  run.sh
results/: all.csv  best.csv  lr.csv  r.csv  template.csv
src/: aggregate.py  models.py  train.py
