[tool.poetry]
name = "llm-lora-classification"
version = "0.1.0"
description = ""
authors = ["hppRC <hpp.ricecake@gmail.com>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "3.10.x"
torch = { url = "https://download.pytorch.org/whl/cu118/torch-2.0.1%2Bcu118-cp310-cp310-linux_x86_64.whl" }
transformers = { extras = ["ja", "sentencepiece"], version = "^4.30.0" }
numpy = "^1.25.0"
pandas = "^2.0.3"
more-itertools = "^9.1.0"
scikit-learn = "^1.2.2"
tqdm = "^4.65.0"
typed-argument-parser = "^1.8.1"
accelerate = "^0.20.3"
bitsandbytes = "^0.39.1"
peft = "^0.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
